--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,53 @@
     padding: 0;
     border: 0;
 }
-
+:root{
+    font-family: 'Rubik', sans-serif;
+}
 .header{
     width: 100%;
+    position: fixed;
+    text-align: center;
+    padding-top: 10px;
+    background-color: white;
+
+}
+.header .logo{
+    width: 155px;
+    
+}
+
+.header .menu{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+
+.header .lista{
+    font-size: 16px;
+    color:#4a4a4a;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 10px;
+    margin-bottom: 13px;
+    list-style: none;
+    text-transform: uppercase;
+    
+}
+.main{
+    background-color: #3CDBC0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.main .titulo{
+    font-size: 30px;
+    color: #FFFFFF;
+    width: 50%;
+
 }
