--- a/css/styles.css
+++ b/css/styles.css
@@ -54,10 +54,26 @@
     color: #FFFFFF;
     width: 30%;
     text-align: center;
-
 }
 
+
+@media screen and (min-width: 769px) {
+    .main .titulo{
+        font-size: 40px;  
     }
-
-}
+    .header{
+        display: flex;
+        justify-content: space-between;
+        padding-top: 20px;
+        padding-left: 30px;
+        padding-bottom: 20px;
+        box-sizing: border-box;
+    }
+    .lista{
+        margin-right: 30px;
+    }
+    }
     
+    }
+}
+  
