--- a/css/styles.css
+++ b/css/styles.css
@@ -10,36 +10,44 @@
     width: 100%;
     position: fixed;
     text-align: center;
-    padding-top: 10px;
+    
     background-color: white;
+    
+
+    
 
 }
 .header .logo{
-    width: 155px;
-    
-    
-    
+    width: 155px;  
+    padding-top: 10px;
 }
+
+
 
 .header .menu{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    
 
 }
 
-.header .lista{
+.header .list{
     font-size: 16px;
     color:#4a4a4a;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 20px;
     margin-top: 10px;
     margin-bottom: 13px;
     list-style: none;
     text-transform: uppercase;
     
+}
+.link{
+    padding: 10px;
+    text-decoration: none;
+    color:#4a4a4a;
 }
 .main{
     background-color: #3CDBC0;
@@ -49,30 +57,49 @@
     justify-content: center;
     align-items: center;
 }
-.main .titulo{
+.main .title{
     font-size: 30px;
     color: #FFFFFF;
     width: 11ch;
     text-align: center;
-}
+    text-transform: capitalize;
+    }
+
 
 
 @media screen and (min-width: 769px) {
-    .main .titulo{
+    .main .title{
         font-size: 40px;  
         
     }
     .header{
         display: flex;
         justify-content: space-between;
-        padding-top: 20px;
-        padding-left: 30px;
-        padding-bottom: 20px;
+       
+       
         box-sizing: border-box;
     }
-    .lista{
-        margin-right: 30px;
+    .list{
+        padding-right: 30px;
         padding-top: 20px;
+        padding-bottom: 10px;
+        padding-left: 10px;
+        margin: 0;
+        
+    }
+    .link{
+        padding-left: 10px;
+        padding-right: 10px;
+        
+    }
+    .logo{
+        padding-bottom: 20px;
+        padding-top: 20px;
+        padding-left: 30px;
+        padding-right: 20px;
+    }
+    .logo-link{
+        padding-top: 10px;
     }
     }
     
